<resources>
    <string name="app_name">douying</string>
    <string name="privacy_statement">隐私声明</string>
    <string name="statement_content">请您务必审慎阅读并充分理解“服务协议”和“隐私政策”的各项条款及说明，美摄仅提供视频后期编辑及拍摄等服务，不会收集您的个人信息。您可阅读《服务协议》和《隐私政策》 了解详细信息。如果您同意，请点击“同意”开始接受我们的服务。</string>
    <string name="service_agreement">服务协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="not_used">暂不使用</string>
    <string name="agree">同意</string>
    <string name="ssl_error_prompt">SSL认证失败，是否继续访问？</string>
    <string name="douYinEffects">抖视频</string>
    <string name="particleEffects">粒子特效</string>
    <string name="captureScene">背景抠像</string>
    <string name="picInPic">画中画</string>
    <string name="flipSubtitles">翻转字幕</string>
    <string name="musicLyrics">音乐唱词</string>
    <string name="pushMirrorFilm">推镜拍摄</string>
    <string name="boomRang">Boomerang</string>
    <string name="makingCover">封面制作</string>
    <string name="photosAlbum">照片影集</string>
    <string name="flashEffect">闪光特效</string>
    <string name="mimo">Mimo</string>
    <string name="theme_shoot">主题拍摄</string>
    <string name="initArsence">人脸初始化正在进行，请稍后</string>
    <string name="no_back_activity_cancel">取消</string>
    <string name="no_back_activity_setting">设置</string>
    <string name="no_back_activity_message">“不保留活动”选项开启，导致功能无法正常使用。请点击“设置”，在“开发者选项”中关闭“不保留活动”。</string>
    <string-array name="main_fragment_item">
        <item>@string/douYinEffects</item>
        <item>@string/captureScene</item>
        <item>@string/particleEffects</item>
        <item>@string/pushMirrorFilm</item>
        <item>@string/flipSubtitles</item>
        <item>@string/picInPic</item>
        <item>@string/musicLyrics</item>
        <item>@string/boomRang</item>
        <item>@string/flashEffect</item>
        <item>@string/photosAlbum</item>
        <item>@string/makingCover</item>
        <item>@string/mimo</item>
        <item>@string/theme_shoot</item>
    </string-array>
    <string-array name="main_fragment_background">
        <item>"main_fragment1_item1_background"</item>
        <item>"main_fragment1_item2_background"</item>
        <item>"main_fragment1_item3_background"</item>
        <item>"main_fragment1_item4_background"</item>
        <item>"main_fragment2_item1_background"</item>
        <item>"main_fragment2_item2_background"</item>
        <item>"main_fragment2_item3_background"</item>
        <item>"main_fragment2_item4_background"</item>
        <item>"main_fragment3_item1_background"</item>
        <item>"main_fragment1_item2_background"</item>
        <item>"main_fragment3_item1_background"</item>
        <item>"main_fragment4_item1_background"</item>
        <item>"main_fragment1_item4_background"</item>
    </string-array>
    <string-array name="main_fragment_image">
        <item>"main_fragment1_item1_image"</item>
        <item>"main_fragment1_item2_image"</item>
        <item>"main_fragment1_item3_image"</item>
        <item>"main_fragment1_item4_image"</item>
        <item>"main_fragment2_item1_image"</item>
        <item>"main_fragment2_item2_image"</item>
        <item>"main_fragment2_item3_image"</item>
        <item>"main_fragment2_item4_image"</item>
        <item>"main_fragment3_item1_image"</item>
        <item>"main_fragment3_item2_image"</item>
        <item>"main_fragment3_item3_image"</item>
        <item>"main_fragment4_item1_image"</item>
        <item>"main_fragment4_item2_image"</item>
    </string-array>
    <string name="versionNumber">V%1$s</string>
    <string name="videoCapture">视频拍摄</string>
    <string name="videoEditName">视频编辑</string>
    <string name="setting">设置</string>
    <string name="captureSetting">拍摄设置</string>
    <string name="captureResolution">拍摄分辨率</string>
    <string name="int1080">1080</string>
    <string name="int720">720</string>
    <string name="int540">540</string>
    <string name="outputSetting">输出设置</string>
    <string name="outputResolution">输出分辨率</string>
    <string name="k4k">4K</string>
    <string name="bitrate">码率</string>
    <string-array name="settingSuggest">
        <item>建议45Mbps，最大180Mbps</item>
        <item>建议15Mbps，最大60Mbps</item>
        <item>建议7Mbps，最大30Mbps</item>
        <item>建议3Mbps，最大15Mbps</item>
    </string-array>
    <string name="mbps">Mbps</string>
    <string name="disable_hardware_encoder">禁用硬件编码器</string>
    <string name="others">其他</string>
    <string name="background_blur_fill">背景模糊填充</string>
    <string name="input_error">输入的数据有误，请重新输入</string>
    <string name="feedback">反馈</string>
    <string name="feedback_hint_text">请描述您想反馈的问题内容</string>
    <string name="feedback_hint_number">留下能帮助我们更好的解决问题哦～</string>
    <string name="feedback_tip1">反馈内容不能为空</string>
    <string name="feedback_tip2">联系方式不能为空</string>
    <string name="feedback_tip3">提交成功</string>
    <string name="feedback_tip4">提交失败</string>
    <string name="feedbackContent">反馈内容</string>
    <string name="zero_over_oneThousand">0/1000</string>
    <string name="contactWay">联系方式（手机，微信号，QQ号）</string>
    <string name="submitFeedback">提交</string>
    <string name="businessCooperation">商务合作 \nTel:010-82851890 \nMail:meishe_sdk@cdv.com</string>
    <string name="photo">拍照</string>
    <string name="video">视频</string>
    <string name="zoom">变焦</string>
    <string name="switch_camera">切换</string>
    <string name="picture_zoom">画面变焦</string>
    <string name="exposure_compensation">曝光补偿</string>
    <string name="exposure">曝光</string>
    <string name="sharpen_open">· 锐度开启</string>
    <string name="sharpen_close">· 锐度关闭</string>
    <string name="default_beauty_close">· 美颜滤镜关闭</string>
    <string name="default_beauty_open">· 美颜滤镜开启</string>
    <string name="beauty_close">美颜关闭</string>
    <string name="beauty_open">美颜开启</string>
    <string name="beauty_shape_close">美型关闭</string>
    <string name="beauty_shape_open">美型开启</string>
    <string name="beauty">美颜</string>
    <string name="skin_beauty">美肤</string>
    <string name="facetype">美型</string>
    <string name="makeup">美妆</string>
    <string name="strength">磨皮</string>
    <string name="whitening">美白</string>
    <string name="whitening_A">美白A</string>
    <string name="whitening_B">美白B</string>
    <string name="ruddy">红润</string>
    <string name="zeroZZZ">00:00</string>
    <string name="whiteningA">· 美白A</string>
    <string name="whiteningB">· 美白B</string>
    <string name="more">更多</string>
    <string name="cartoon_filter">漫画滤镜</string>
    <string name="beauty_whitening_mode">美白模式</string>
    <string name="beauty_a">A</string>
    <string name="beauty_b">B</string>
    <string name="cheek_thinning">瘦脸</string>
    <string name="eye_enlarging">大眼</string>
    <string name="intensity_forehead">额头</string>
    <string name="intensity_chin">下巴</string>
    <string name="intensity_nose">瘦鼻</string>
    <string name="intensity_mouth">嘴型</string>
    <string name="face_small">小脸</string>
    <string name="face_thin">窄脸</string>
    <string name="nose_long">长鼻</string>
    <string name="eye_corner">眼角</string>
    <string name="mouse_corner">嘴角</string>
    <string name="beauty_facetype_first">美型1</string>
    <string name="beauty_facetype_second">美型2</string>
    <string name="makeup_null">无</string>
    <string name="makeup_exist_main_menu_1">晒伤妆</string>
    <string name="makeup_exist_main_menu_2">烟熏妆</string>
    <string name="makeup_exist_main_menu_3">古风妆</string>
    <string name="makeup_custom_main_menu_libstick">口红</string>
    <string name="makeup_custom_main_menu_eyebrow">眉毛</string>
    <string name="makeup_custom_main_menu_eye_shadow">眼影</string>
    <string name="makeup_custom_main_menu_eyelash">睫毛</string>
    <string name="makeup_custom_main_menu_blush">腮红</string>
    <string name="makeup_custom_main_menu_shadow">阴影</string>
    <string name="makeup_custom_sub_menu_libstick_1">雾面哑光</string>
    <string name="makeup_custom_sub_menu_libstick_2">水彩纯釉</string>
    <string name="makeup_custom_sub_menu_libstick_3">质感缎面</string>
    <string name="makeup_custom_sub_menu_eyebrow_1">一字眉</string>
    <string name="makeup_custom_sub_menu_eyebrow_2">欧美眉</string>
    <string name="makeup_custom_sub_menu_eyebrow_3">柳叶眉</string>
    <string name="makeup_custom_sub_menu_eye_shadow_1">日常</string>
    <string name="makeup_custom_sub_menu_eye_shadow_2">华丽</string>
    <string name="makeup_custom_sub_menu_eye_shadow_3">大烟熏</string>
    <string name="makeup_custom_sub_menu_eyelash_1">自然</string>
    <string name="makeup_custom_sub_menu_eyelash_2">浓密</string>
    <string name="makeup_custom_sub_menu_eyelash_3">芭比</string>
    <string name="makeup_custom_sub_menu_blush_1">办公室</string>
    <string name="makeup_custom_sub_menu_blush_2">约会</string>
    <string name="makeup_custom_sub_menu_blush_3">聚会</string>
    <string name="makeup_custom_sub_menu_shadow_1">深邃</string>
    <string name="makeup_custom_sub_menu_shadow_2">可爱</string>
    <string name="makeup_custom_sub_menu_shadow_3">饱满</string>
    <string-array name="select_media">
        <item>所有内容</item>
        <item>视频</item>
        <item>图片</item>
    </string-array>
    <string-array name="mimo_select_media">
        
        <item>视频</item>
        
    </string-array>
    <string name="selectMedia">选中内容</string>
    <string name="setSelectMedia">已选%1$d项</string>
    <string name="select_two_video">选择2个素材进行制作</string>
    <string name="select_the_second_video">选择第2个素材</string>
    <string name="prompt">提示</string>
    <string name="startMaking">开始制作</string>
    <string name="checkAll">全选</string>
    <string name="cancelCheckAll">取消全选</string>
    <string name="date">日期</string>
    <string name="yearMonthDate">yyyy-MM-dd</string>
    <string name="today">今天</string>
    <string name="single_select_picture">选择图片</string>
    <string name="select_video">选择视频</string>
    <string name="select_assets">素材选择</string>
    <string name="select_production_proportion">选择制作比例</string>
    <string name="twentyOneTNine">21:9</string>
    <string name="nineTTwentyOne">9:21</string>
    <string name="sixteenTNine">16:9</string>
    <string name="nineTSixteen">9:16</string>
    <string name="eighteenTNine">18:9</string>
    <string name="nineTEighteen">9:18</string>
    <string name="fourTThree">4:3</string>
    <string name="threeTFour">3:4</string>
    <string name="oneTone">1:1</string>
    <string-array name="videoEdit">
        <item>@string/theme</item>
        <item>@string/edit</item>
        <item>@string/filter</item>
        <item>@string/animatedSticker</item>
        <item>@string/animation</item>
        <item>@string/caption</item>
        <item>@string/comcaption</item>
        <item>@string/watermark</item>
        <item>@string/transition</item>
        <item>@string/music</item>
        <item>@string/dub</item>
    </string-array>
    <string name="compile">生成</string>
    <string name="theme">主题</string>
    <string name="edit">编辑</string>
    <string name="filter">滤镜</string>
    <string name="animatedSticker">贴纸</string>
    <string name="animation">动画</string>
    <string name="line_spacing">行间距</string>
    <string name="letter_spacing">字间距</string>
    <string name="small">较小</string>
    <string name="standard">标准</string>
    <string name="more_large">较大</string>
    <string name="large">大</string>
    <string name="apply_to_all">将样式应用到所有字幕</string>
    <string name="cancel">取消</string>
    <string name="confirm2">确定</string>
    <string name="giveupfx">是否放弃已有效果？</string>
    <string name="main_footer_home">首页</string>
    <string name="main_footer_city">同城</string>
    <string name="main_footer_message">消息</string>
    <string name="main_footer_me">我</string>
    <string name="home_follow_hint1">暂无关注人动态</string>
    <string name="home_follow_hint2">查看通讯录好友，关注他们的抖音动态</string>
    <string name="home_follow_add">通讯录同步好友</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
</resources>