<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        >
        <TextView
            android:id="@+id/tv_line_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:text="@string/line_spacing"
            android:gravity="center"
            android:background="@drawable/shape_caption_spacing_corner_line_selected"
            />
        <TextView
            android:id="@+id/tv_letter_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="10sp"
            android:textColor="@color/menu_selected"
            android:text="@string/letter_spacing"
            android:gravity="center"
            android:background="@drawable/shape_caption_spacing_corner_letter"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/small_btn"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_caption_font_corner_button"
            android:text="@string/small"
            android:textColor="@color/ccffffff"
            android:textSize="12sp"
            android:textAllCaps="false"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/standard_btn"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_caption_font_corner_button"
            android:text="@string/standard"
            android:textColor="@color/ccffffff"
            android:textSize="12sp"
            android:textAllCaps="false"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/more_btn"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_caption_font_corner_button"
            android:text="@string/more_large"
            android:textColor="@color/ccffffff"
            android:textSize="12sp"
            android:textAllCaps="false"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/large_btn"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_caption_font_corner_button"
            android:text="@string/large"
            android:textColor="@color/ccffffff"
            android:textSize="12sp"
            android:textAllCaps="false"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/applyToAll"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="13dp"
        android:layout_alignParentBottom="true">
        <ImageView
            android:id="@+id/applyToAllImage"
            android:layout_width="15dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/applyToAllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/apply_to_all"
            android:textColor="#ff909293"
            android:textSize="10sp"/>
    </LinearLayout>

</RelativeLayout>