<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--显示Fragment-->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--    底部导航栏 -->
    <!-- tabIndicatorAnimationDuration默认300ms    -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_170"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        app:tabIndicatorHeight="0dp"
        app:tabMode="fixed"
        app:tabRippleColor="@android:color/transparent"
        app:tabSelectedTextColor="@color/main_tab_selected"
        app:tabTextColor="@color/main_tab">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/main_footer_home"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_footer_city" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_footer_message" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_footer_me" />
    </com.google.android.material.tabs.TabLayout>
</FrameLayout>