<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="215dp"
    android:layout_height="111dp"
    android:background="@drawable/shape_compile_dialog_bg">

    <TextView
        android:id="@+id/tipsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/giveupfx"
        android:textColor="#333333"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#19000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTranslucent"
                android:text="@string/confirm2"
                android:textColor="#333333"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#19000000" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTranslucent"
                android:text="@string/cancel"
                android:textColor="@color/ms_blue"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>