<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:background="@drawable/privacy_statement_dailog_style">
        <TextView
            android:id="@+id/statementTitle"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:text="@string/privacy_statement"
            android:gravity="center"/>
        <TextView
            android:id="@+id/statementContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statementTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:textColor="#ff333333"
            android:textSize="15sp">
        </TextView>
        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/statementContent"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/notUsedButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="#ff333333"
                android:textSize="18sp"
                android:text="@string/not_used"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/agreeButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="#ff407df8"
                android:textSize="18sp"
                android:text="@string/agree"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>